--- a/Final Test/MDEV1001-M2023-FinalTest/MDEV1001-M2023-FinalTest/Utility/Base.lproj/Main.storyboard
+++ b/Final Test/MDEV1001-M2023-FinalTest/MDEV1001-M2023-FinalTest/Utility/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Uhr-iP-5IE">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,6 +9,156 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Authentication View Controller-->
+        <scene sceneID="F9J-vT-djO">
+            <objects>
+                <viewController storyboardIdentifier="AuthenticationViewController" id="Uhr-iP-5IE" customClass="AuthenticationViewController" customModule="MDEV1001_M2023_FinalTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="59u-5Z-VzQ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="WCw-p3-fpF">
+                                <rect key="frame" x="25" y="79" width="343" height="387"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="IIv-V1-dqS">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I8H-rb-Tcg">
+                                                <rect key="frame" x="137" y="0.0" width="69" height="32.333333333333336"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2T4-FB-DjD">
+                                                <rect key="frame" x="149" y="38.333333333333329" width="45" height="21.666666666666671"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UYC-Ne-2Nn">
+                                        <rect key="frame" x="0.0" y="85" width="343" height="302"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="chL-Xa-xRR">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="42" id="blV-gW-udu"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="ln7-Iw-MGw">
+                                                <rect key="frame" x="0.0" y="52" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="42" id="CVp-Tq-GOk"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="eFb-dX-sYh">
+                                                <rect key="frame" x="0.0" y="104" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="HU9-1i-cE1">
+                                                <rect key="frame" x="0.0" y="156" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="ag2-Oc-vTg">
+                                                <rect key="frame" x="0.0" y="208" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="ZGZ-1O-JDH">
+                                                <rect key="frame" x="0.0" y="260" width="343" height="42"/>
+                                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xOY-2x-jTw">
+                                <rect key="frame" x="25" y="706.33333333333337" width="343" height="52.666666666666629"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="primaryButtonTapped" destination="Uhr-iP-5IE" eventType="touchUpInside" id="4ce-g0-W2o"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Etp-LR-Dit">
+                                <rect key="frame" x="186.66666666666666" y="722.66666666666663" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Z9t-W5-RFj">
+                                <rect key="frame" x="155.33333333333334" y="769" width="82.666666666666657" height="29"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAg-UJ-MsX">
+                                        <rect key="frame" x="0.0" y="6" width="36.666666666666664" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3lE-8W-5Aw">
+                                        <rect key="frame" x="36.666666666666657" y="0.0" width="46" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="messageButtonTapped" destination="Uhr-iP-5IE" eventType="touchUpInside" id="frH-SH-74e"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="p3N-JZ-y24"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="p3N-JZ-y24" firstAttribute="bottom" secondItem="Z9t-W5-RFj" secondAttribute="bottom" constant="20" id="42Z-4r-51S"/>
+                            <constraint firstItem="xOY-2x-jTw" firstAttribute="leading" secondItem="WCw-p3-fpF" secondAttribute="leading" id="FFc-Tw-B8T"/>
+                            <constraint firstItem="xOY-2x-jTw" firstAttribute="trailing" secondItem="WCw-p3-fpF" secondAttribute="trailing" id="M9M-EH-ok7"/>
+                            <constraint firstItem="Z9t-W5-RFj" firstAttribute="top" secondItem="xOY-2x-jTw" secondAttribute="bottom" constant="10" id="Rcs-WK-cjc"/>
+                            <constraint firstItem="xOY-2x-jTw" firstAttribute="height" secondItem="59u-5Z-VzQ" secondAttribute="height" multiplier="0.062" id="VrX-JC-6LA"/>
+                            <constraint firstItem="WCw-p3-fpF" firstAttribute="leading" secondItem="59u-5Z-VzQ" secondAttribute="leading" constant="25" id="X5T-LW-PTs"/>
+                            <constraint firstItem="Etp-LR-Dit" firstAttribute="centerX" secondItem="xOY-2x-jTw" secondAttribute="centerX" id="Zfs-EN-s7k"/>
+                            <constraint firstItem="p3N-JZ-y24" firstAttribute="trailing" secondItem="WCw-p3-fpF" secondAttribute="trailing" constant="25" id="eyt-FB-dmS"/>
+                            <constraint firstItem="WCw-p3-fpF" firstAttribute="top" secondItem="p3N-JZ-y24" secondAttribute="top" constant="20" id="q2W-jl-0pR"/>
+                            <constraint firstItem="Z9t-W5-RFj" firstAttribute="centerX" secondItem="p3N-JZ-y24" secondAttribute="centerX" id="tNH-hH-B2r"/>
+                            <constraint firstItem="Etp-LR-Dit" firstAttribute="centerY" secondItem="xOY-2x-jTw" secondAttribute="centerY" id="uMA-Tu-CJq"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="confirmEmailTextField" destination="HU9-1i-cE1" id="V71-Zh-FKU"/>
+                        <outlet property="confirmPasswordTextField" destination="ZGZ-1O-JDH" id="AjZ-O0-V1a"/>
+                        <outlet property="emailTextField" destination="eFb-dX-sYh" id="E4r-FZ-wCp"/>
+                        <outlet property="headingStackView" destination="IIv-V1-dqS" id="h2d-DA-AuM"/>
+                        <outlet property="messageButton" destination="3lE-8W-5Aw" id="YZB-Y9-Kjg"/>
+                        <outlet property="messageLabel" destination="mAg-UJ-MsX" id="znA-oP-yQz"/>
+                        <outlet property="messageStackViewBottomConstraint" destination="42Z-4r-51S" id="ic2-Xg-YWf"/>
+                        <outlet property="nameTextField" destination="chL-Xa-xRR" id="20A-UM-O9J"/>
+                        <outlet property="passwordTextField" destination="ag2-Oc-vTg" id="0N7-AC-fcF"/>
+                        <outlet property="primaryButton" destination="xOY-2x-jTw" id="ZFp-9a-4fd"/>
+                        <outlet property="spinnerView" destination="Etp-LR-Dit" id="GIA-oc-dZx"/>
+                        <outlet property="subtitleLabel" destination="2T4-FB-DjD" id="KSS-2k-GqE"/>
+                        <outlet property="titleLabel" destination="I8H-rb-Tcg" id="O9j-bh-jD6"/>
+                        <outlet property="usernameTextField" destination="ln7-Iw-MGw" id="aI9-mz-OIu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8MQ-hO-sfi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-663" y="4"/>
+        </scene>
         <!--People View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -85,8 +235,14 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
